new class RiverQuality

--- a/entity/State.cls
+++ b/entity/State.cls
@@ -17,4 +17,22 @@ ClassMethod setStateName(stateName As %String) As %Status
  	write !,status2
 }
 
+Storage Default
+{
+<Data name="StateDefaultData">
+<Value name="1">
+<Value>%%CLASSNAME</Value>
+</Value>
+<Value name="2">
+<Value>name</Value>
+</Value>
+</Data>
+<DataLocation>^entity.StateD</DataLocation>
+<DefaultData>StateDefaultData</DefaultData>
+<IdLocation>^entity.StateD</IdLocation>
+<IndexLocation>^entity.StateI</IndexLocation>
+<StreamLocation>^entity.StateS</StreamLocation>
+<Type>%Library.CacheStorage</Type>
+}
+
 }
