Pavan added the methods to the class utilities.ServiceOfAffectedHabitations: townsOrVillages(), waterImpurity(), townOrVillageImpurity()

--- a/entity/TownOrVillageImpurity.cls
+++ b/entity/TownOrVillageImpurity.cls
@@ -1,4 +1,4 @@
-Class entity.TownOrVillageImpurity Extends %Persistent [ StorageStrategy = "" ]
+Class entity.TownOrVillageImpurity Extends %Persistent
 {
 
 Property name As TownOrVillage;
