--- a/dao/TownDao.cls
+++ b/dao/TownDao.cls
@@ -23,8 +23,8 @@ ClassMethod townsOrVillages() As %Status
 	 	 
 	 	 set districtObj = ##class(entity.District).%OpenId(id)
 	 	 set obj.districtName = districtObj
+///test
 	 	 set status = obj.%Save()
  	 }
 }
 }
-//test commit
