--- a/json/StateService.cls
+++ b/json/StateService.cls
@@ -82,4 +82,18 @@ ClassMethod readDataAtDistrict(ByVal distname As %String ) As %Status
 	return $$$OK
 }
 
+ClassMethod readLocationOfRiver(ByVal statename As %String) As %Status
+{
+	set list=##class(dao.StateDao).riverLocation(statename,.status )
+	set returnJsonObj ={}
+	set jsonArray = []
+	for i = 1:1:list.Count(){
+		do jsonArray.%Push(list.GetAt(i))
+	}
+	
+	set returnJsonObj.location = jsonArray
+	write returnJsonObj.%ToJSON()
+	return $$$OK 
+}
+
 }
