--- a/web/REST.cls
+++ b/web/REST.cls
@@ -1,18 +1,28 @@
 /// Dispatch class
 Class web.REST Extends %CSP.REST
 {
- // ClassMethod OnHandleOptionsRequest(pUrl As %String) as %Status
- //{
- //	 Set tOrigin=$Get(%request.CgiEnvs("HTTP_ORIGIN"))
- //	 Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Origin",tOrigin) 
- //	 Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Credentials","true")
- //	 Set tHeaders=$Get(%request.CgiEnvs("HTTP_ACCESS_CONTROL_REQUEST_HEADERS"))
- //     Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Headers",tHeaders)
- //     Set tMethod=$Get(%request.CgiEnvs("HTTP_ACCESS_CONTROL_REQUEST_METHOD"))
- //     Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Method",tMethod)
- //	
- //}
 
+// ClassMethod OnHandleOptionsRequest(pUrl As %String) as %Status
+
+// {
+
+// 	 Set tOrigin=$Get(%request.CgiEnvs("HTTP_ORIGIN"))
+
+// 	 Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Origin",tOrigin) 
+
+// 	 Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Credentials","true")
+
+// 	 Set tHeaders=$Get(%request.CgiEnvs("HTTP_ACCESS_CONTROL_REQUEST_HEADERS"))
+
+//     Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Headers",tHeaders)
+
+//     Set tMethod=$Get(%request.CgiEnvs("HTTP_ACCESS_CONTROL_REQUEST_METHOD"))
+
+//     Do ..SetResponseHeaderIfEmpty("Access-Control-Allow-Method",tMethod)
+
+// 	
+
+// }
 
 XData UrlMap [ XMLNamespace = "http://www.intersystems.com/urlmap" ]
 {
@@ -30,7 +40,9 @@ XData UrlMap [ XMLNamespace = "http://www.intersystems.com/urlmap" ]
 <Route Url="/towns" Method="GET" Call="json.StateService:readAllTowns" Cors="true"/>
 <Route Url="/districts/:name" Method="GET" Call="json.StateService:readByState" Cors="true"/>
 <Route Url="/impurity/:name" Method="GET" Call="json.StateService:readDataAtDistrict" Cors="true" />
-<Route Url="/river" Method="GET" Call="json.StateService:readLocationOfRiver" Cors="true" />
+<Route Url="/river" Method="POST" Call="json.StateService:readLocationOfRiver" Cors="true" />
+<Route Url="/index/" Method="POST" Call="json.StateService:IndexCalculator" Cors="true" />
+<Route Url="/indexI" Method="POST" Call="json.StateService:IndexCalculatorLoc" Cors="true" />
 </Routes>
 }
 
