--- a/dao/StateDao.cls
+++ b/dao/StateDao.cls
@@ -25,7 +25,7 @@ ClassMethod readAll(ByRef status As %Status) As %ListOfObjects
 	quit list
 }
 
-ClassMethod riverLocation(ByVal statename,ByRef status ) As %ListOfDataTypes
+ClassMethod riverLocation(statename, ByRef status) As %ListOfDataTypes
 {
 	set status=$$$OK
 	set list = ##class(%ListOfDataTypes).%New()
@@ -33,7 +33,7 @@ ClassMethod riverLocation(ByVal statename,ByRef status ) As %ListOfDataTypes
 		&sql(declare RiverCursor cursor for
 			select Locations
 			from entity.RiverQuality 
-			where State=statename )
+			where State=:statename )
 			
 		&sql(open RiverCursor)
 		for{
@@ -50,4 +50,67 @@ ClassMethod riverLocation(ByVal statename,ByRef status ) As %ListOfDataTypes
 	return list
 }
 
+ClassMethod PurityParameter(statename, ByRef status) As %Numeric
+{
+	set status=$$$OK
+	set mean=0
+	try{
+		&sql(declare RiverCursor2 cursor for
+			select phMEAN,NitrateNitriteMEAN,DisolvedOxygenMEAN,FecalColiformMEAN
+			from entity.RiverQuality 
+			where State=:statename )
+		set sum=0
+		set count=0
+		&sql(open RiverCursor2)
+		for{
+			&sql(fetch RiverCursor2 into :ph,:ni,:do,:fcol)
+			quit:(SQLCODE '=0)
+			set a=##class(utilities.ServiceOfRiverQuality).IndexCalc(ph, ni , do, fcol) 
+			set sum=sum+a
+			set count=count+1
+		}
+		&sql(close RiverCursor2)
+		set mean=sum/count
+	}
+	catch(ex)
+	{
+		set status = ex.AsStatus()
+	}
+	
+	return mean
 }
+
+
+ClassMethod PurityParameterLoc(location, ByRef status) As %Numeric
+{
+	set status=$$$OK
+	set mean=0
+	try{
+		&sql(declare RiverCursor3 cursor for
+			select phMEAN,NitrateNitriteMEAN,DisolvedOxygenMEAN,FecalColiformMEAN
+			from entity.RiverQuality 
+			where Locations=:location )
+		set sum=0
+		set count=0
+		&sql(open RiverCursor3 )
+		for{
+			&sql(fetch RiverCursor3 into :ph,:ni,:do,:fcol)
+			quit:(SQLCODE '=0)
+			set a=##class(utilities.ServiceOfRiverQuality).IndexCalc(ph, ni , do, fcol) 
+			set sum=sum+a
+			set count=count+1
+		}
+		&sql(close RiverCursor3 )
+		set mean=sum/count
+	}
+	catch(ex)
+	{
+		set status = ex.AsStatus()
+	}
+	
+	return mean 
+}
+	
+	
+}
+
