ServiceOfWaterQuality.cls is not %Persystent, it is a class - utility - collection of methods

--- a/utilities/ServiceOfWaterQuality.cls
+++ b/utilities/ServiceOfWaterQuality.cls
@@ -1,4 +1,4 @@
-Class utilities.ServiceOfWaterQuality extends %Persistent {
+Class utilities.ServiceOfWaterQuality {
 
 /// we should take information from initial data (AffectedWaterParameters) about states
 ClassMethod states() As %Status
@@ -34,21 +34,6 @@ ClassMethod stateImpurityData(state As %String) As %String
 	
 	  &sql(fetch data)
 	  return myJSONString
-}
-
-Storage Default
-{
-<Data name="ServiceOfWaterQualityDefaultData">
-<Value name="1">
-<Value>%%CLASSNAME</Value>
-</Value>
-</Data>
-<DataLocation>^utilities.ServiceOfWa8C46D</DataLocation>
-<DefaultData>ServiceOfWaterQualityDefaultData</DefaultData>
-<IdLocation>^utilities.ServiceOfWa8C46D</IdLocation>
-<IndexLocation>^utilities.ServiceOfWa8C46I</IndexLocation>
-<StreamLocation>^utilities.ServiceOfWa8C46S</StreamLocation>
-<Type>%Library.CacheStorage</Type>
 }
 
 }
